--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Joff Tiquez <jofftiquez@gmail.com>",
   "scripts": {
     "lint": "eslint --ext .js,.vue ./ --fix",
+    "format": "prettier --config ./.prettierrc -w 'src/**/*.{js,vue}' && git update-index --again",
     "build": "nuxt build",
     "postbuild": "cd .output/server && rimraf node_modules && yarn && cd .. && yarn rename-server",
     "rename-server": "node scripts/rename-server.js",
