--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
     "@nuxt/devtools": "^0.6.4",
+    "@nuxt/types": "^2.17.1",
+    "@nuxt/typescript-build": "^3.0.1",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/forms": "^0.5.3",
@@ -33,7 +35,8 @@
     "nuxt": "^3.6.1",
     "nuxt-gtag": "^0.5.7",
     "nuxt-headlessui": "^1.1.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.9",
