--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "description": "jmfv's portfolio website based on the starter template: Nuxtwind Daisy (Nuxt.js 3 + Tailwind CSS + Daisy UI).",
   "author": "Jann Marc Villablanca <jmfv.dev@gmail.com>",
   "scripts": {
-    "lint": "eslint --ext .js,.vue ./ --fix",
     "format": "prettier --config ./.prettierrc -w 'src/**/*.{js,vue}' && git update-index --again",
+    "lint": "eslint --ext .js,.vue ./ --fix",
+    "postlint": "yarn format",
     "build": "nuxt build",
     "postbuild": "cd .output/server && rimraf node_modules && yarn && cd .. && yarn rename-server",
     "rename-server": "node scripts/rename-server.js",
